# excel-toolkit

./: .gitignore  README.md  TEST_REPORT.md  app.py  create_samples.py  frontend_test.py  pyproject.toml  run.py  simple_test.py
examples/: multi_sheet_data.xlsx  sample_data1.csv  sample_data1.xlsx  sample_data2.xlsx
templates/: index.html
